--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/philo",
-			"args": ["3", "800", "500", "200"],
+			"program": "${workspaceFolder}/philo_bonus/philo_bonus",
+			"args": ["4", "800", "500", "200"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
