--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: otodd <otodd@student.42london.com>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/13 17:53:24 by otodd             #+#    #+#              #
-#    Updated: 2024/04/23 13:43:02 by otodd            ###   ########.fr        #
+#    Updated: 2024/04/23 17:18:12 by otodd            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,13 +27,9 @@ INC_DIR 	= 	include
 
 SRCS		= 	$(SRC_DIR)/init.c			\
 				$(SRC_DIR)/logging.c		\
-				$(SRC_DIR)/utils.c			\
-				$(SRC_DIR)/ft_atoi.c		\
-				$(SRC_DIR)/ft_ischeck_str.c	\
-				$(SRC_DIR)/ft_isdigit.c		\
-				$(SRC_DIR)/routines.c		\
-				$(SRC_DIR)/god.c			\
-				$(SRC_DIR)/table.c
+				$(SRC_DIR)/ft_utils.c		\
+				$(SRC_DIR)/run.c			\
+				$(SRC_DIR)/manage.c			
 
 OBJS 		= 	$(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
