--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/philo_bonus/philo_bonus",
+			"program": "${workspaceFolder}/philo/philo",
 			"args": ["4", "800", "500", "200"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
