--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: otodd <otodd@student.42london.com>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/13 17:53:24 by otodd             #+#    #+#              #
-#    Updated: 2024/04/23 13:41:08 by otodd            ###   ########.fr        #
+#    Updated: 2024/04/23 17:56:16 by otodd            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,16 +25,12 @@ SRC_DIR 	= 	src
 OBJ_DIR 	= 	obj
 INC_DIR 	= 	include
 
-SRCS		= 	$(SRC_DIR)/init.c			\
+SRCS		= 	$(SRC_DIR)/ft_utils.c		\
+				$(SRC_DIR)/init.c			\
 				$(SRC_DIR)/logging.c		\
-				$(SRC_DIR)/utils.c			\
-				$(SRC_DIR)/utils_2.c		\
-				$(SRC_DIR)/ft_atoi.c		\
-				$(SRC_DIR)/ft_ischeck_str.c	\
-				$(SRC_DIR)/ft_isdigit.c		\
-				$(SRC_DIR)/routines.c		\
-				$(SRC_DIR)/god.c			\
-				$(SRC_DIR)/table.c
+				$(SRC_DIR)/manage.c			\
+				$(SRC_DIR)/run.c			\
+				$(SRC_DIR)/utils.c
 
 OBJS 		= 	$(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
