--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Get valgrind
       run: sudo apt-get install valgrind
 
+    - name: Get norminette
+      run: pip install norminette
+
     - name: Install tree
       run: sudo apt-get install tree
 
