--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -52,3 +52,12 @@ jobs:
 
     - name: Run bonus with helgrind
       run: valgrind --tool=helgrind -s ./philo_bonus/philo_bonus 10 8000000 200 200 20
+    
+    - name: Clone tester
+      run: git clone https://github.com/WOLFIE-OG/LazyPhilosophersTesterGithubActions
+    
+    - name: Test standard
+      run: cd LazyPhilosophersTesterGithubActions && ./test.sh ../philo/philo
+    
+    - name: Test bonus
+      run: cd LazyPhilosophersTesterGithubActions && ./test.sh ../philo_bonus/philo_bonus
