--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -41,14 +41,39 @@ jobs:
     - name: Run standard and check eat count of 1
       run: ./philo/philo 5 800 200 200 7 | grep "1 is eating" | wc -l
     
+    - name: Run standard and check eat count of 2
+      run: ./philo/philo 5 800 200 200 7 | grep "2 is eating" | wc -l
+
+    - name: Run standard and check eat count of 3
+      run: ./philo/philo 5 800 200 200 7 | grep "3 is eating" | wc -l
+
+    - name: Run standard and check eat count of 4
+      run: ./philo/philo 5 800 200 200 7 | grep "4 is eating" | wc -l
+
+    - name: Run standard and check eat count of 5
+      run: ./philo/philo 5 800 200 200 7 | grep "5 is eating" | wc -l
+
     - name: Run standard and check eat count of all
       run: ./philo/philo 5 800 200 200 7 | grep "is eating"| wc -l
 
     - name: Run standard with valgrind
-      run: valgrind -s ./philo/philo 5 8000000 200 200 20
+      run: valgrind -s ./philo/philo 5 800 200 200 20
+    
+    - name: Run standard with valgrind with one die
+      run: valgrind -s ./philo/philo 5 80 200 200 20
+    
+    - name: Run standard with valgrind with one
+      run: valgrind -s ./philo/philo 1 800 200 200 20
 
-    - name: Run standard with helgrind
-      run: valgrind --tool=helgrind -s ./philo/philo 10 8000000 200 200 20
+    - name: Run standard with helgrind 
+      run: valgrind --tool=helgrind -s ./philo/philo 10 800 200 200 20
+
+    - name: Run standard with helgrind with one die
+      run: valgrind --tool=helgrind -s ./philo/philo 1 80 200 200 20
+
+    - name: Run standard with helgrind with one
+      run: valgrind --tool=helgrind -s ./philo/philo 1 800 200 200 20
+
     
     - name: Run bonus
       run: ./philo_bonus/philo_bonus 5 800 200 200 20
@@ -56,14 +81,38 @@ jobs:
     - name: Run bonus and check eat count of 1
       run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "1 is eating" | wc -l
     
+    - name: Run bonus and check eat count of 2
+      run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "2 is eating" | wc -l
+    
+    - name: Run bonus and check eat count of 3
+      run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "3 is eating" | wc -l
+
+    - name: Run bonus and check eat count of 4
+      run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "4 is eating" | wc -l
+
+    - name: Run bonus and check eat count of 5
+      run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "5 is eating" | wc -l
+
     - name: Run bonus and check eat count of all
       run: ./philo_bonus/philo_bonus 5 800 200 200 7 | grep "is eating"| wc -l
 
     - name: Run bonus with valgrind
-      run: valgrind -s ./philo_bonus/philo_bonus 5 8000000 200 200 20
+      run: valgrind -s ./philo_bonus/philo_bonus 5 800 200 200 20
+
+    - name: Run bonus with valgrind with one die
+      run: valgrind -s ./philo_bonus/philo_bonus 5 80 200 200 20
+    
+    - name: Run bonus with valgrind with one
+      run: valgrind -s ./philo_bonus/philo_bonus 1 800 200 200 20
 
     - name: Run bonus with helgrind
-      run: valgrind --tool=helgrind -s ./philo_bonus/philo_bonus 10 8000000 200 200 20
+      run: valgrind --tool=helgrind -s ./philo_bonus/philo_bonus 10 800 200 200 20
+    
+    - name: Run bonus with helgrind with one die
+      run: valgrind --tool=helgrind -s ./philo_bonus/philo_bonus 1 80 200 200 20
+
+    - name: Run bonus with helgrind with one
+      run: valgrind --tool=helgrind -s ./philo_bonus/philo_bonus 1 800 200 200 20
     
     - name: Clone tester
       run: git clone https://github.com/WOLFIE-OG/LazyPhilosophersTesterGithubActions
